php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46271 SoapClient local_cert option only understands absolute paths on windows
Submitted: 2008-10-10 13:47 UTC Modified: 2008-10-14 23:40 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: arrakami at gmail dot com Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.2.6 OS: Windows XP
Private report: No CVE-ID: None
 [2008-10-10 13:47 UTC] arrakami at gmail dot com
Description:
------------
The local_cert option in SoapClient does not understand relative 
paths on windows machines. While it does on Linux machines. Sorry i 
cannot provide any actual credentials to test this.

Reproduce code:
---------------
$soapclient_opts = array(
	'local_cert' => 'some\relative\path\cert.pem',
);

$SoapClient = new SoapClient('some\relative\wsdl.xml', $soapclient_opts);

try {
	
    $request = new SoapVar($some_xml_request, XSD_ANYXML);
	
    $SoapClient->__soapCall('someFunc', array($request));
	
} catch(SoapFault $e) {
    print_r($e);
}


Expected result:
----------------
One would expect that SoapClient would connect to the webservice and 
call the required function or if the relative path is not allowed to 
pass the soapclient should throw and error saying exactly that. 

Actual result:
--------------
An exception is thrown which says "Could not connect to host." If you 
pass an absolute path to the local_cert everything works fine.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-10-14 23:40 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 12 15:00:01 2026 UTC