MFB: Fixed bug #46271 (local_cert option is not resolved to full path)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267339 c90b9560-bf6c-de11-be94-00142212c4b1